// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortableLabel should render correctly 1`] = `
.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-2 {
  margin-left: 0.25rem;
  font-size: 1rem;
  fill: #AAAAB9;
}

<div>
  <span
    class="emotion-3"
  >
    <svg
      class="emotion-2"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <polygon
        class="emotion-0"
        points="12 4.94 16.95 9.89 18.36 8.47 12 2.11 5.64 8.47 7.05 9.89 12 4.94"
      />
      <polygon
        class="emotion-0"
        points="12 19.06 7.05 14.11 5.64 15.53 12 21.89 18.36 15.53 16.95 14.11 12 19.06"
      />
    </svg>
  </span>
</div>
`;

exports[`SortableLabel should render correctly 2`] = `
.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-2 {
  margin-left: 0.25rem;
  font-size: 1rem;
  fill: #AAAAB9;
}

.emotion-0 {
  fill: #0069D0;
}

<div>
  <span
    class="emotion-3"
  >
    <svg
      class="emotion-2"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <polygon
        class="emotion-0"
        points="12 4.94 16.95 9.89 18.36 8.47 12 2.11 5.64 8.47 7.05 9.89 12 4.94"
      />
      <polygon
        class="emotion-1"
        points="12 19.06 7.05 14.11 5.64 15.53 12 21.89 18.36 15.53 16.95 14.11 12 19.06"
      />
    </svg>
  </span>
</div>
`;

exports[`SortableLabel should render correctly 3`] = `
.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-2 {
  margin-left: 0.25rem;
  font-size: 1rem;
  fill: #AAAAB9;
}

.emotion-1 {
  fill: #0069D0;
}

<div>
  <span
    class="emotion-3"
  >
    <svg
      class="emotion-2"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <polygon
        class="emotion-0"
        points="12 4.94 16.95 9.89 18.36 8.47 12 2.11 5.64 8.47 7.05 9.89 12 4.94"
      />
      <polygon
        class="emotion-1"
        points="12 19.06 7.05 14.11 5.64 15.53 12 21.89 18.36 15.53 16.95 14.11 12 19.06"
      />
    </svg>
  </span>
</div>
`;
